style: add padding to make sure the very bottom of scrollable content is visible

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ header {
   box-shadow: 0 0 5px 0 gray;
   grid-row: 1;
   grid-column: 1 / span 2;
+  z-index: 1;
 }
 
 .searchBar {
@@ -185,11 +186,11 @@ header {
   grid-column: 1;
   grid-row: 2 / span 2;
   background-color: #e2e8f0;
-  padding: 20px 12px;
+  padding: 20px 5px 0 12px;
 }
 
 .myProjects > h1 {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   font-size: 1rem;
 }
 
@@ -198,6 +199,9 @@ header {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 3fr));
   grid-gap: 20px 20px;
+  overflow-y: scroll;
+  height: 100%;
+  padding: 0 10px 50px 0;
 }
 
 .project {
@@ -271,10 +275,11 @@ header {
   overflow-y: hidden;
   grid-template-columns: 3fr 1fr;
   grid-template-rows: fit-content(0) 1fr 1fr;
+  background-color: #e2e8f0;
 }
 
 .announcements {
-  padding: 20px 25px 0 0;
+  padding: 20px 5px 0 0;
   background-color: #e2e8f0;
   grid-area: 1 / 2 / 2 / 3;
   grid-row: 2;
@@ -291,7 +296,7 @@ header {
   max-height: 40vh;
   overflow-y: scroll;
   border-radius: 5px;
-  padding: 0 13px;
+  padding: 0 13px 10px 13px;
 }
 
 .announcement-title {
@@ -313,7 +318,7 @@ header {
 .trending {
   grid-area: 3 / 2;
   background-color: #e2e8f0;
-  padding: 20px 25px 0 0;
+  padding: 20px 5px 0 0;
 }
 
 .trending > h1 {
